--- a/README.adoc
+++ b/README.adoc
@@ -196,7 +196,7 @@ UUID=7D524647407BEC2A	/home/bzgec/SlimBoi      	ntfs      	defaults  	0 0
 . mount your linux partition:
 ** btrfs: `mount -o noatime,compress=lzo,space_cache=v2,subvol=@ /dev/nvme0n1p7 /mnt`
 ** other (not tested): `mount -t auto /dev/nvme0n1p7 /mnt`
-. mount EFI partition: `mount /dev/nvme0n1p5`
+. mount EFI partition: `mount /dev/nvme0n1p5 /mnt/boot`
 +
 --
 You can check which one is EFI with `fdisk -l`
