--- a/install.adoc
+++ b/install.adoc
@@ -243,7 +243,7 @@ partition is referred to with a udev device node, so the `resume` hook must go a
 HOOKS=(base udev autodetect modconf block filesystems keyboard resume)
 ----
 
-* https://wiki.archlinux.org/index.php/kernel_parameters)[Kernel parameters]
+* https://wiki.archlinux.org/index.php/kernel_parameters[Kernel parameters]
 * https://wiki.archlinux.org/index.php/Power_management/Suspend_and_hibernate#Hibernation[Power management - suspend and hibernate]
 
 == Change options for closing the laptop lid, power button press
